Remove the GPS trajectory which has two point with same timestamps.

--- a/test.ipynb
+++ b/test.ipynb
@@ -65,6 +65,55 @@
     "    # 保存图像\n",
     "    cv2.imwrite(f'{save_path}/{gps_name[:-4]}.png', binary_image)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "trip_1109.txt: 100%|██████████| 283/283 [00:01<00:00, 183.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# re arrange the traj data by time\n",
+    "\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import pickle\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from coordinate_transform import wgs_to_gcj02_to_mercator\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "gps_path = \"datasets/trips_0_24\"\n",
+    "iter = tqdm(os.listdir(gps_path))\n",
+    "save_path = 'datasets/trips_0_24_sorted'\n",
+    "if not os.path.isdir(save_path):\n",
+    "    os.makedirs(save_path)\n",
+    "\n",
+    "for file_name in iter:\n",
+    "    iter.set_description(file_name)\n",
+    "    gps_df = pd.read_csv(os.path.join(gps_path, file_name), header=None)\n",
+    "    gps_df.columns = ['id', 'lat', 'lon', 'time']\n",
+    "    gps_df = gps_df.sort_values(by='time')\n",
+    "    gps_df.to_csv(f'{save_path}/{file_name}', index=False, header=False)\n",
+    "\n",
+    "print(\"Done!\")"
+   ]
   }
  ],
  "metadata": {
